# iolite

./: LICENSE  README.md  setup.cfg  setup.py
docs/: Makefile  conf.py  ice_rings.rst  index.rst  iolite_tutorial.rst  make.bat
share/: count_overlaps_pixel.txt  count_overlaps_shoeboxes.txt  integrate_params.phil  sigma_boundaries.txt  sigma_values.txt
src/iolite/: _init_.py  classify_overlaps.py  classify_sigma.py  collect_data_overlaps.py  extract.py  ice_ring_classifier_test.py  ice_rings.py  iolite_preparation.py  label_dataset.py  mask.py  overlapping_spots.py  plot_results.py  plot_results_ice_ring.py  plot_results_overlaps.py  radial_average_bg.py  run_extract_and overlaps.sh  run_iolite.py  run_overlaps_pixel.sh  run_overlaps_reflection.sh  run_prep_for_ice_rings.sh  run_prep_overlaps_sigma.sh  run_xia2.py  sigma_values.py  test_ice_rings.py  try_things.py
src/iolite/classification/: __init__.py  classify_overlaps.py  classify_sigma.py
src/iolite/command_line/: __init__.py  run_extract_and overlaps.sh  run_overlaps_pixel.sh  run_overlaps_reflection.sh  run_prep_for_ice_rings.sh  run_prep_overlaps_sigma.sh  run_radial_average_bg.sh
src/iolite/ice_ring/: __init__.py  ice_ring_classifier_test.py
src/iolite/overlaps/: __init__.py  collect_data_overlaps.py  plot_results_overlaps.py
src/iolite/sigma/: __init__.py
src/iolite/sigma_values/: sigma_values.py
tests/: test_overlap_counter.py
