[metadata]
name = iolite
version = 0.1.0

description = Something that I do not know yet.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/jmp1985/halerror

project_urls =
    Source=https://github.com/egrahl/iolite
    Tracker=https://github.com/egrahl/iolite/issues

author = Elin Grahlert

author_email = elin.grahlert@diamond.ac.uk

license = BSD license

license_file = LICENSE

keywords = 
    exception
    HAL-9000     # I think that still needs to be changed 

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

platforms = 
    unix
    linux
    osx
    cygwin
    win32

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=src/iolite --doctest-modules