[metadata]
name = iolite
version = 0.1.0

description = A classification program for ice-rings, overlapping spots and mosaicity of X-ray diffraction datasets of macro-molecular crystallography.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/egrahl/iolite

project_urls =
    Source=https://github.com/egrahl/iolite
    Tracker=https://github.com/egrahl/iolite/issues

author = Elin Grahlert

author_email = elin.grahlert@diamond.ac.uk

license = BSD license

license_file = LICENSE

keywords = 
    ice-rings
    overlapping spots
    classification

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

platforms = 
    unix
    linux
    osx
    cygwin
    win32

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=src/iolite --doctest-modules